Fix alignment

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,6 @@
 .q-ctn {
-  height: 80%;
+  height: 75%;
+  padding: 0;
   overflow-x: hidden;
   overflow-y: scroll;
   overflow: -moz-scrollbars-none;
@@ -7,20 +8,27 @@
 }
 .q-ctn::-webkit-scrollbar { width: 0 !important }
 
+#quote-ctn {
+  height: 100%;
+  display: flex;
+  align-content: center;
+}
+
 .quote-text {
-  font-size: 32px;
+  font-size: 24px;
   font-style: italic;
   margin-top: 25px;
   text-align: left;
 }
 
 .quote-author {
-  font-size: 20px;
+  font-size: 22px;
   text-align: right;
 }
 
 .btn-ctn {
   display: flex;
+  justify-content: center;
   position: absolute;
   bottom: 20px;
   width: 100%;
@@ -29,6 +37,10 @@
 @media screen and (min-width: 768px) {
   .quote-text {
     margin-top: 50px;
+    font-size: 32px;
+  }
+  .quote-author {
+    font-size: 20px;
   }
   /* 1st button */
   .next-btn {
@@ -91,14 +103,14 @@
 }
 
 .next-btn {
-  background: none;
+  background: #121212;
   border: 4px solid #3F3F3F;
   color: white;
   display: inline-block;
   font-size: 18px;
   font-weight: bold;
   line-height: 24px;
-  margin: auto;
+  /* margin: auto; */
   padding: 12px 32px 12px 82px;
   position: relative;
   text-decoration: none;
